Fix vertical alignment

--- a/client/web/src/enterprise/batches/execution/WorkspaceDetails.module.scss
+++ b/client/web/src/enterprise/batches/execution/WorkspaceDetails.module.scss
@@ -1,3 +1,11 @@
+.workspace-name {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    line-height: 1.5rem;
+    gap: 0.25rem;
+}
+
 .workspace-detail {
     padding: 0 0.375rem;
     margin: 0;
